Starting to switch to a object oriented architecture (required to manage parameters like matrix extent): Added matrix task main structure

--- a/xraysim/test/Makefile
+++ b/xraysim/test/Makefile
@@ -1,7 +1,7 @@
 CXXDEBUGFLAGS=-g -DDEBUG
 
 all:
-	g++ $(CXXFLAGS) testmain.cpp -o xraysim-test
+	g++ $(CXXFLAGS) testmain.cpp ../src/matrixtask.cpp -o xraysim-test
 
 debug:
 		g++ $(CXXDEBUGFLAGS) testmain.cpp -o xraysim-test
