--- a/xraysim/test/Makefile
+++ b/xraysim/test/Makefile
@@ -1,7 +1,8 @@
+CXXFLAGS=-I../include
 CXXDEBUGFLAGS=-g -DDEBUG
 
 all:
 	g++ $(CXXFLAGS) testmain.cpp ../src/matrixtask.cpp -o xraysim-test
 
 debug:
-		g++ $(CXXDEBUGFLAGS) testmain.cpp -o xraysim-test
+		g++ $(CXXFLAGS) $(CXXDEBUGFLAGS) testmain.cpp -o xraysim-test
