Moved testing bug runtime error still occurs

--- a/xraysim/test/Makefile
+++ b/xraysim/test/Makefile
@@ -1,8 +1,8 @@
-CXXFLAGS=-I../include
+CXXFLAGS=-I../include -O0
 CXXDEBUGFLAGS=-g -DDEBUG
 
 all:
 	g++ $(CXXFLAGS) testmain.cpp ../src/matrixtask.cpp -o xraysim-test
 
 debug:
-		g++ $(CXXFLAGS) $(CXXDEBUGFLAGS) testmain.cpp -o xraysim-test
+		g++ $(CXXFLAGS) $(CXXDEBUGFLAGS) testmain.cpp ../src/matrixtask.cpp -o xraysim-test
