--- a/xraysim/test/Makefile
+++ b/xraysim/test/Makefile
@@ -1,8 +1,13 @@
 CXXFLAGS=-I../include -O0
 CXXDEBUGFLAGS=-g -DDEBUG
+OBJECTS=../build/matrixtask.o ../build/matrix.o
 
-all:
-	g++ $(CXXFLAGS) testmain.cpp ../src/matrixtask.cpp -o xraysim-test
+objects:
+	g++ -c -o ../build/matrixtask.o ../src/matrixtask.cpp
+	g++ -c -o ../build/matrixtask.o ../src/matrix.cpp
+
+all: objects
+	g++ $(CXXFLAGS) testmain.cpp $(OBJECTS) -o xraysim-test
 
 debug:
-		g++ $(CXXFLAGS) $(CXXDEBUGFLAGS) testmain.cpp ../src/matrixtask.cpp -o xraysim-test
+		g++ $(CXXFLAGS) $(CXXDEBUGFLAGS) testmain.cpp $(OBJECTS) -o xraysim-test
