Added test makefile; Fixed major contrsuctor bug in Matrix2d(std::istream&), matrixtopng unstable works now.

--- a/xraysim/unstable/Makefile
+++ b/xraysim/unstable/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ ../src/matrix.cpp ../src/matrixtask.cpp matrixtopng.cpp -o matrixtopng -lcairo
+	g++ -g ../src/matrix.cpp ../src/matrixtask.cpp matrixtopng.cpp -o matrixtopng -lcairo
